:lady_beetle: bugfix at mozilla browser

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                  </div>
                  <div class="col-md-6 ml-5">
                      <div class="d-flex justify-content-center align-items-center">
-                         <img src="./img/imgPerfil.svg" alt="imagem de perfil de Manu Coutinho" class="img-fluid slide-in-bck-right" loading="lazy">
+                         <img src="./assets/imgPerfil.svg" alt="imagem de perfil de Manu Coutinho" class="img-fluid slide-in-bck-right" loading="lazy">
                      </div>
                  </div>    
                </div>
@@ -163,7 +163,7 @@
                      </div>
                      <div class="col-md-6 gx-5">
                            <div>
-                              <img class="img-fluid" src="./img/imgAbout.svg"
+                              <img class="img-fluid" src="./assets/imgAbout.svg"
                               alt="imagem lateral" caption="imagem de uma mulher vestida de amarelo, sentada sobre o símbolo do React">
                            </div>
                      </div>
@@ -305,7 +305,7 @@
        <div class="row mt-5">
           <div class="col-md-12 d-flex justify-content-center">
              <a class="btn btn-lg btn-link rounded-0 text-decoration-none btn-hiring" 
-                   href="./pdf/emanuela-cv.pdf">Download PDF</a>
+                   href="./assets/emanuela-cv.pdf">Download PDF</a>
           </div>
        </div>
       
@@ -329,22 +329,22 @@
               <div class="grid-gallery">              
                   <!-- trigger modal -->
                   <a href="#" class="card-gallery animating">
-                     <img src="./img/img-preview.png" class="img-thumbnail img-fluid" alt="" data-bs-toggle="modal" data-bs-target="#modalOne"/>
+                     <img src="./assets/img-preview.png" class="img-thumbnail img-fluid" alt="" data-bs-toggle="modal" data-bs-target="#modalOne"/>
                   </a>
                   <a href="#" class="card-gallery animating">
-                     <img src="./img/img-preview.png" class="img-thumbnail img-fluid" alt="" data-bs-toggle="modal" data-bs-target="#modalTwo"/>
+                     <img src="./assets/img-preview.png" class="img-thumbnail img-fluid" alt="" data-bs-toggle="modal" data-bs-target="#modalTwo"/>
                   </a>
                   <a href="#" class="card-gallery animating">
-                     <img src="./img/chirp.jpg" class="img-thumbnail img-fluid" alt="" data-bs-toggle="modal" data-bs-target="#modalThree"/>
+                     <img src="./assets/chirp.jpg" class="img-thumbnail img-fluid" alt="" data-bs-toggle="modal" data-bs-target="#modalThree"/>
                   </a>
                   <a href="#" class="card-gallery animating">
-                     <img src="./img/img-preview.png" class="img-thumbnail img-fluid" alt="" data-bs-toggle="modal" data-bs-target="#modalFour"/>
+                     <img src="./assets/img-preview.png" class="img-thumbnail img-fluid" alt="" data-bs-toggle="modal" data-bs-target="#modalFour"/>
                   </a>
                   <a href="#" class="card-gallery animating">
-                     <img src="./img/img-preview.png" class="img-thumbnail img-fluid" alt="" data-bs-toggle="modal" data-bs-target="#modalFive"/>
+                     <img src="./assets/img-preview.png" class="img-thumbnail img-fluid" alt="" data-bs-toggle="modal" data-bs-target="#modalFive"/>
                   </a>
                   <a href="#" class="card-gallery animating">
-                     <img src="./img/img-preview.png" class="img-thumbnail img-fluid" alt="" data-bs-toggle="modal" data-bs-target="#modalSix"/>
+                     <img src="./assets/img-preview.png" class="img-thumbnail img-fluid" alt="" data-bs-toggle="modal" data-bs-target="#modalSix"/>
                   </a>
                   <!-- Modal -->
                   <div class="modal fade" id="modalOne" tabindex="-1" aria-labelledby="modalOneLabel" aria-hidden="true">
@@ -358,7 +358,7 @@
                            <div class="container-fluid">
                               <div class="row">
                                  <div class="col-md-7">
-                                    <img src="./img/img-preview.png" alt="" class="img-fluid"/>               
+                                    <img src="./assets/img-preview.png" alt="" class="img-fluid"/>               
                                  </div>
                                  <div class="col-md-5">
                                     <h4>Informações:</h4>
@@ -429,7 +429,7 @@
                            <div class="container-fluid">
                               <div class="row">
                                  <div class="col-md-7">
-                                    <img src="./img/chirp.jpg" alt="" class="img-fluid"/>
+                                    <img src="./assets/chirp.jpg" alt="" class="img-fluid"/>
                
                                  </div>
                                  <div class="col-md-5">
