:lady_beetle: fix favicon

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <link rel="stylesheet" href="./css/finalSection.css">
     <script src="./javascript/progressbar.min.js"></script>
     <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>     
-    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
-    <link rel="apple-touch-icon" href="./img/favicon.png">
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="./assets/favicon.png">
     <link rel="canonical" href="https://manucoutinho.github.io/">
     <meta name="keywords" content="sites, web, desenvolvimento, programador,desenvolvedora, manu coutinho, front-end, freelancer, freela, website, portfolio, ManuCoutinho, Emanuela Coutinho" />
     <meta name="copyright" content="ManuCoutinho 2021" />
@@ -36,7 +36,7 @@
     <meta name="theme-color" content="#F29F05">
     <meta property="og:title" content="Portfolio"/>
     <meta property="og:description" content="Portfólio - Manu Coutinho | Desenvolvedora Front-End" />
-    <meta property="og:image" content="https://imgur.com/AZac3x4" />
+    <meta property="og:image" content="https://i.imgur.com/AZac3x4.png"/>
     <meta name="author" content="Emanuela Coutinho" />
 </head>
 
