:sparkles: new project

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
               <div class="grid-gallery">              
                   <!-- trigger modal -->
                   <a href="#" class="card-gallery animating">
-                     <img src="./assets/img-preview.png" class="img-fluid" alt="" data-bs-toggle="modal" data-bs-target="#modalOne"/>
+                     <img src="./assets/imgCardMosquito.jpg" class="img-fluid" alt="" data-bs-toggle="modal" data-bs-target="#modalOne"/>
                   </a>
                   <a href="#" class="card-gallery animating">
                      <img src="./assets/imgCardTecnogueto.png" class="img-fluid" alt="" data-bs-toggle="modal" data-bs-target="#modalTwo"/>
@@ -348,31 +348,36 @@
                   </a>
                   <!-- Modal -->
                   <div class="modal fade" id="modalOne" tabindex="-1" aria-labelledby="modalOneLabel" aria-hidden="true">
-                     <div class="modal-dialog modal-xl modal-dialog-centered">
+                     <div class="modal-dialog modal-lg modal-dialog-centered">
                      <div class="modal-content">
                         <div class="modal-header">
-                           <h2 class="modal-title" id="modalOneLabel">MC Money</h2>
+                           <h2 class="modal-title" id="modalOneLabel">Mata Mosquitos</h2>
                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
                            <div class="container-fluid">
-                              <div class="row">
+                              <div class="row d-flex justify-content-center align-items-center">
                                  <div class="col-md-7">
-                                    <img src="./assets/img-preview.png" alt="" class="img-fluid"/>               
+                                    <img src="./assets/imgMosquito.png" alt="" class="img-fluid"/>               
                                  </div>
                                  <div class="col-md-5">
                                     <h4>Informações:</h4>
-                                    <p>lorem ipsum dolor sit amet, consectetur adip</p>
+                                    <p>Mini game criado para browser no qual foi desenvolvido com vanilla Javascript, no qual 
+                                       há a manipulação dos pontos de captura da tela, redenrização das imagens e captura dos cliques nos mosquitos.
+                                       Game contém quatro níveis de difuculdade para se divertir!
+                                    </p>
                                     <h4>Detalhes:</h4>
                                     <div>
-                                     <p> <span>Tecnologia:</span> React.Js, Sass, HTML, CSS3</p>
-                                     <p> <span>Data: </span>aug/21</p>
-                                     <p><span>Veja mais em: </span> <a href="https://github.com/ManuCoutinho" target="_blank" class="icones-rodape"><i class="bi bi-github mx-2"></i></a></p>
+                                     <p> <span>Tecnologia:</span> HTML, CSS3, Javascript</p>
+                                     <p> <span>Data: </span>apr/21</p>
+                                     <p><span>Veja mais em: </span> <a href="https://github.com/ManuCoutinho/waves" 
+                                       target="_blank"><i class="bi bi-github mx-2"></i></a>
+                                       <a href=" https://quirky-banach-cf3e3f.netlify.app/" target="_blank"><i class="bi bi-link-45deg"></i></a>
+                                    </p>
                                     </div>
                                  </div>
                               </div>
-                           </div>
-                           
+                           </div>                          
                         </div>
                         <div class="modal-footer">
                            <button type="button" class="btn btn-outline btn-modal rounded-0" data-bs-dismiss="modal">Sair</button>                           
