--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">    
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;700;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500&display=swap" rel="stylesheet">  
+    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/globalStyles.css">
-    <link rel="stylesheet" href="./css/animations.css">
-    <link rel="stylesheet" href="./css/commons.css">
     <link rel="stylesheet" href="./css/responsive.css">
+    <link rel="stylesheet" href="./css/commons.css">
+    <link rel="stylesheet" href="./css/animations.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/main.css">    
     <link rel="stylesheet" href="./css/aboutSection.css">
@@ -26,8 +27,8 @@
     <link rel="stylesheet" href="./css/finalSection.css">
     <script src="./javascript/progressbar.min.js"></script>
     <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>     
-    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
-    <link rel="apple-touch-icon" href="./assets/favicon.png">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="favicon.png">
     <link rel="canonical" href="https://manucoutinho.github.io/">
     <meta name="keywords" content="sites, web, desenvolvimento, programador,desenvolvedora, manu coutinho, front-end, freelancer, freela, website, portfolio, ManuCoutinho, Emanuela Coutinho" />
     <meta name="copyright" content="ManuCoutinho 2021" />
@@ -640,8 +641,14 @@
       </div>
     </footer>
     <!--fim rodape-->
+    <script src="./javascript/vendor/modernizr-3.11.8.min.js"></script>
+    <script src="./javascript/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <script src="https://player.vimeo.com/api/player.js"></script>
-    <script src="./javascript/script.js"></script>
+    <script>
+      window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+      ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 </html>
