--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/globalStyles.css">
-    <link rel="stylesheet" href="./css/responsive.css">
     <link rel="stylesheet" href="./css/commons.css">
     <link rel="stylesheet" href="./css/animations.css">
     <link rel="stylesheet" href="./css/header.css">
@@ -25,6 +24,7 @@
     <link rel="stylesheet" href="./css/sumarySection.css">   
     <link rel="stylesheet" href="./css/portfolioSection.css"> 
     <link rel="stylesheet" href="./css/finalSection.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <script src="./javascript/progressbar.min.js"></script>
     <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>     
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
@@ -327,26 +327,98 @@
                      <span class=" px-2 subtitles">Portfólio</span>
                   </p>
                <h2 class="title-section mb-5">Alguns dos meus projetos</h2>
-               <div class="grid-gallery">              
-                     <!-- trigger modal -->
-                     <a href="#" class="card-gallery animating">
-                        <img src="./assets/imgCardMosquito.jpg" class="img-fluid" alt="" data-bs-toggle="modal" data-bs-target="#modalOne"/>
-                     </a>
-                     <a href="#" class="card-gallery animating">
-                        <img src="./assets/imgCardTecnogueto.png" class="img-fluid" alt="" data-bs-toggle="modal" data-bs-target="#modalTwo"/>
-                     </a>
-                     <a href="#" class="card-gallery animating">
-                        <img src="./assets/imgCardChirp.png" class="img-fluid" alt="" data-bs-toggle="modal" data-bs-target="#modalThree"/>
-                     </a>
-                     <a href="#" class="card-gallery animating">
-                        <img src="./assets/img-preview.png" class="img-fluid" alt="" data-bs-toggle="modal" data-bs-target="#modalFour"/>
-                     </a>
-                     <a href="#" class="card-gallery animating">
-                        <img src="./assets/imgCardWaves.png" class="img-fluid" alt="" data-bs-toggle="modal" data-bs-target="#modalFive"/>
-                     </a>
-                     <a href="#" class="card-gallery animating">
-                        <img src="./assets/img-preview.png" class="img-fluid" alt="" data-bs-toggle="modal" data-bs-target="#modalSix"/>
-                     </a>
+               <div class="container-gallery">              
+                     <!-- trigger modal -->                     
+                     <div class="service-box" style="--i:#F29F05" data-bs-toggle="modal" data-bs-target="#modalOne">
+                        <a href="#" class="text-decoration-none">
+                           <div class="icon-gallery">
+                              <ion-icon name="game-controller-outline"></ion-icon>
+                           </div>
+                           <div class="content-card">
+                              <h2>
+                                 Mata Mosquito
+                              </h2>
+                              <p>
+                                 Um game simples e divertido para ser jogado diretamente no browser. Clique para saber mais...
+                              </p>
+                           </div>
+                        </a>
+                     </div>
+                     <div class="service-box" style="--i:#F21D56" data-bs-toggle="modal" data-bs-target="#modalTwo">
+                        <a href="#" class="text-decoration-none">
+                           <div class="icon-gallery">
+                              <ion-icon name="today-outline"></ion-icon>
+                           </div>
+                           <div class="content-card">
+                              <h2>
+                                 Tecnogueto
+                              </h2>
+                              <p>
+                                 Landing page criada com fundamentos básicos do front-end. Clique para saber mais...
+                              </p>
+                           </div>
+                        </a>
+                     </div>
+                     <div class="service-box" style="--i:#F29F05" data-bs-toggle="modal" data-bs-target="#modalThree">
+                        <a href="#" class="text-decoration-none">
+                           <div class="icon-gallery">
+                              <ion-icon name="bar-chart-outline"></ion-icon>
+                           </div>
+                           <div class="content-card">
+                              <h2>
+                                 .Chirp
+                              </h2>
+                              <p>
+                                 Clone de landing page disponibilizada no front-end mentor. Clique para saber mais...
+                              </p>
+                           </div>
+                        </a>
+                     </div>
+                     <div class="service-box" style="--i:#F21D56" data-bs-toggle="modal" data-bs-target="#modalFour">
+                        <a href="#" class="text-decoration-none">
+                           <div class="icon-gallery">
+                              <ion-icon name="list-outline"></ion-icon>
+                           </div>
+                           <div class="content-card">
+                              <h2>
+                                 Task List
+                              </h2>
+                              <p>
+                                 Aplicação para controle de atividades pessoais ou profissionais. Clique para saber mais...
+                              </p>
+                           </div>
+                        </a>
+                     </div>
+                     <div class="service-box" style="--i:#F29F05" data-bs-toggle="modal" data-bs-target="#modalFive">
+                        <a href="#" class="text-decoration-none">
+                           <div class="icon-gallery">
+                              <ion-icon name="stopwatch-outline"></ion-icon>
+                           </div>
+                           <div class="content-card">
+                              <h2>
+                                 Countdown Timer
+                              </h2>
+                              <p>
+                                 Countdown times com animação em CSS. Clique para saber mais...
+                              </p>
+                           </div>
+                        </a>
+                     </div>
+                     <div class="service-box" style="--i:#F21D56" data-bs-toggle="modal" data-bs-target="#modalSix">
+                        <a href="#" class="text-decoration-none">
+                           <div class="icon-gallery">
+                              <ion-icon name="cash-outline"></ion-icon>
+                           </div>
+                           <div class="content-card">
+                              <h2>
+                                 MC Money
+                              </h2>
+                              <p>
+                                 Aplicação para registro e controle do orçamento. Clique para saber mais...
+                              </p>
+                           </div>
+                        </a>
+                     </div>
                      <!-- Modal -->
                      <div class="modal fade" id="modalOne" tabindex="-1" aria-labelledby="modalOneLabel" aria-hidden="true">
                         <div class="modal-dialog modal-lg modal-dialog-centered">
@@ -579,7 +651,7 @@
                         </div>
                      </div> <!--fim modal-->
                </div>
-                  <a href="#contact"><span class="d-flex justify-content-center">
+                  <a href="#contact"><span class="d-flex justify-content-center mt-5">
                      <i class="bi bi-arrow-down-short d-lg-block arrow"></i></span>
                   </a>             
             </div>
@@ -594,7 +666,7 @@
                 <div class="row">
                     <div class="col-md-6">
                        <div class="box-img">
-                           <img src="./assets/imgContact.png" alt="imagem de Manu Coutinho" class="img-fluid img-contact">      
+                           <img src="./assets/imgContact.svg" alt="imagem de Manu Coutinho" class="img-fluid img-contact">      
                        </div>                                                 
                     </div>
                     
@@ -643,6 +715,8 @@
     <!--fim rodape-->
     <script src="./javascript/vendor/modernizr-3.11.8.min.js"></script>
     <script src="./javascript/script.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <script src="https://player.vimeo.com/api/player.js"></script>
     <script>
