:sparkles: new contents on  portfolio section

--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
 
                      <!-- Modal -->
                      <div class="modal fade" id="modalFour" tabindex="-1" aria-labelledby="modalFourLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-xl modal-dialog-centered">
+                        <div class="modal-dialog modal-lg modal-dialog-centered">
                            <div class="modal-content">
                               <div class="modal-header">
                                  <h2 class="modal-title" id="modalFourLabel">Task List</h2>
@@ -548,18 +548,23 @@
                               <div class="modal-body">
                                  <div class="container-fluid">
                                     <div class="row">
-                                       <div class="col-md-7">
-                                          <img src="./img/img-preview.png" alt="" class="img-fluid"/>
-                     
-                                       </div>
+                                      <div class="col-md-7 d-flex justify-content-center align-items-center">
+                                        <div class="ratio ratio-1x1">
+                                           <iframe src="https://player.vimeo.com/video/639373152" 
+                                           frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="task-list">
+                                           </iframe>
+                                        </div>                                         
+                                     </div>
                                        <div class="col-md-5">
                                           <h4>Informações:</h4>
-                                          <p>lorem ipsum dolor sit amet, consectetur adip</p>
+                                          <p>Pequena aplicação capaz de registrar uma lista de atividades e excluí-las com eficiência, podendo
+                                            ser incorporada como parte de outra aplicação.
+                                          </p>
                                           <h4>Detalhes:</h4>
                                           <div>
-                                          <p> <span>Tecnologia:</span> React.Js, Sass, HTML</p>
-                                          <p> <span>Data: </span>aug/21</p>
-                                          <p><span>Veja mais em: </span> <a href="https://github.com/ManuCoutinho" target="_blank" class="icones-rodape"><i class="bi bi-github mx-2"></i></a></p>
+                                          <p> <span>Tecnologia:</span> React.Js, Styled Components, HTML</p>
+                                          <p> <span>Data: jul/21 </span>aug/21</p>
+                                          <p><span>Veja mais em: </span> <a href="https://github.com/ManuCoutinho/desafio-task-list" target="_blank" class="icones-rodape"><i class="bi bi-github mx-2"></i></a></p>
                                           </div>
                                        </div>
                                     </div>
@@ -620,24 +625,24 @@
                         <div class="modal-dialog modal-lg modal-dialog-centered">
                            <div class="modal-content">
                               <div class="modal-header">
-                                 <h2 class="modal-title" id="modalSixLabel">Lista Filmes</h2>
+                                 <h2 class="modal-title" id="modalSixLabel">mcmoney</h2>
                                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                               </div>
                               <div class="modal-body">
                                  <div class="container-fluid">
                                     <div class="row">
                                        <div class="col-md-7">
-                                          <img src="./img/img-preview.png" alt="" class="img-fluid"/>
+                                          <img src="./assets/img-preview.png" alt="background temporário" class="img-fluid"/>
                      
                                        </div>
                                        <div class="col-md-5">
                                           <h4>Informações:</h4>
-                                          <p>lorem ipsum dolor sit amet, consectetur adip</p>
+                                          <p>Aplicação para registro de entradas e saídas financeiras.</p>
                                           <h4>Detalhes:</h4>
                                           <div>
-                                          <p> <span>Tecnologia:</span> React.Js, Sass, HTML</p>
+                                          <p> <span>Tecnologia:</span> React.Js, Typescript, Styled Components, HTML</p>
                                           <p> <span>Data: </span>aug/21</p>
-                                          <p><span>Veja mais em: </span> <a href="https://github.com/ManuCoutinho" target="_blank" class="icones-rodape"><i class="bi bi-github mx-2"></i></a></p>
+                                          <p><span>Veja mais em: </span> <a href="https://github.com/ManuCoutinho/mcmoney" target="_blank" class="icones-rodape"><i class="bi bi-github mx-2"></i></a></p>
                                           </div>
                                        </div>
                                     </div>
