:sparkles: add new project in portfolio section

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                                  Countdown Timer
                               </h2>
                               <p>
-                                 Countdown times com animação em CSS. Clique para saber mais...
+                                 Countdown timer com animação em CSS. Clique para saber mais...
                               </p>
                            </div>
                         </a>
@@ -408,14 +408,14 @@
                      <div class="service-box" style="--i:#F21D56" data-bs-toggle="modal" data-bs-target="#modalSix">
                         <a href="#" class="text-decoration-none">
                            <div class="icon-gallery">
-                              <ion-icon name="cash-outline"></ion-icon>
+                              <ion-icon name="megaphone-outline"></ion-icon>
                            </div>
                            <div class="content-card">
                               <h2>
-                                 MC Money
+                                 Meu Freela
                               </h2>
                               <p>
-                                 Aplicação para registro e controle do orçamento. Clique para saber mais...
+                                Landing Page construída em React. Clique para saber mais...
                               </p>
                            </div>
                         </a>
@@ -516,7 +516,8 @@
                                        </div>
                                        <div class="col-md-5">
                                           <h4>Informações:</h4>
-                                          <p>Landing Page desenvolvida para Digipix com aplicação do Vite.Js com template Vanilla e SCSS.
+                                          <p>Landing Page desenvolvida para Digipix com aplicação do Vite.Js com template JavaScript 
+                                             Vanilla e SCSS.
                                           </p>
                                           <h4>Detalhes:</h4>
                                           <div>
@@ -565,8 +566,12 @@
                                           <h4>Detalhes:</h4>
                                           <div>
                                           <p> <span>Tecnologia:</span> React.Js, Styled Components, HTML</p>
-                                          <p> <span>Data: jul/21 </span>aug/21</p>
-                                          <p><span>Veja mais em: </span> <a href="https://github.com/ManuCoutinho/desafio-task-list" target="_blank" class="icones-rodape"><i class="bi bi-github mx-2"></i></a></p>
+                                          <p> <span>Data: </span>aug/21</p>
+                                          <p><span>Veja mais em: </span> <a href="https://github.com/ManuCoutinho/desafio-task-list" 
+                                             target="_blank" class="icones-rodape">
+                                             <i class="bi bi-github mx-2"></i>
+                                             </a>
+                                          </p>
                                           </div>
                                        </div>
                                     </div>
@@ -593,7 +598,7 @@
                                        <div class="col-md-7 d-flex justify-content-center align-items-center">
                                           <div class="ratio ratio-1x1">
                                              <iframe src="https://player.vimeo.com/video/610352804?h=a5c3889a8a&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
-                                             frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="countdown-wavws-promo.mp4">
+                                             frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="countdown-waves-promo.mp4">
                                              </iframe>
                                           </div>               
                                        </div>
@@ -627,24 +632,35 @@
                         <div class="modal-dialog modal-lg modal-dialog-centered">
                            <div class="modal-content">
                               <div class="modal-header">
-                                 <h2 class="modal-title" id="modalSixLabel">mcmoney</h2>
+                                 <h2 class="modal-title" id="modalSixLabel">Meu Freela</h2>
                                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                               </div>
                               <div class="modal-body">
                                  <div class="container-fluid">
                                     <div class="row">
                                        <div class="col-md-7">
-                                          <img src="./assets/img-preview.png" alt="background temporário" class="img-fluid" loading="lazy"/>
+                                          <div class="ratio ratio-1x1">
+                                             <iframe src="https://player.vimeo.com/video/652280414?h=1ad4b7f806&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
+                                             frameborder="1" allow="autoplay; fullscreen; picture-in-picture" 
+                                             allowfullscreen 
+                                             title="meufreela.mp4">
+                                             </iframe>
+                                          </div>     
                      
                                        </div>
                                        <div class="col-md-5">
                                           <h4>Informações:</h4>
-                                          <p>Aplicação para registro de entradas e saídas financeiras.</p>
+                                          <p>Aplicação criada no template React para Vite.Js, na qual utiliza a biblioteca Toastify para
+                                             exibir os logs de resposta ao envio do formulário. Fake api construída com Axios e MirageJS.</p>
                                           <h4>Detalhes:</h4>
                                           <div>
-                                          <p> <span>Tecnologia:</span> React.Js, Typescript, Styled Components, HTML</p>
-                                          <p> <span>Data: </span>aug/21</p>
-                                          <p><span>Veja mais em: </span> <a href="https://github.com/ManuCoutinho/mcmoney" target="_blank" class="icones-rodape"><i class="bi bi-github mx-2"></i></a></p>
+                                          <p> <span>Tecnologia:</span> HTML, React.Js, Sass, Toastify, MirageJS, Axios </p>
+                                          <p> <span>Data: </span>nov/21</p>
+                                          <p><span>Veja mais em: </span> <a href="https://github.com/ManuCoutinho/meuFreela" 
+                                             target="_blank" class="icones-rodape"><i class="bi bi-github mx-2"></i></a>
+                                             <a href="https://objective-davinci-315b86.netlify.app/" target="_blank">
+                                                <i class="bi bi-link-45deg"></i></a>
+                                          </p>
                                           </div>
                                        </div>
                                     </div>
