:tada: starting branch v2.0

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                <div class="row mt-5">
                   <div class="col-md-12 d-flex justify-content-center">
                      <a class="btn btn-lg btn-link rounded-0 text-decoration-none btn-hiring" 
-                           href="./assets/emanuela-cv.pdf">Download PDF</a>
+                        href="https://resume.io/r/lIHzRmeBa" rel="noopener noreferrer">Download CV</a>
                   </div>
                </div>
                
